Update directory_item_grid and DirectoryAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,6 +376,7 @@
         <b>Reddit:</b>
         https://www.reddit.com/r/SimpleMobileTools
     </string>
+    <string name="photo_cnt_sufix">%s Media</string>
 
     <!--
         Haven't found some strings? There's more at
